Adjustments based on lint results